Update known-vagrant for Ubuntu/Xenial
This update updates for the latest version of LTS ubuntu, including using mariadb and PHP 7.0.

Closes #1

--- a/ansible/roles/mysql/tasks/main.yml
+++ b/ansible/roles/mysql/tasks/main.yml
@@ -2,8 +2,9 @@
 - name: Install MySQL
   action: apt pkg={{item}} state=installed
   with_items:
-    - mysql-server
-    - php5-mysql
+    - mariadb-server
+    - php7.0-mysql
+    - php7.0-pdo
     - python-mysqldb
 
 - name: Get list of hosts for the anonymous user
