--- a/ansible/roles/php/tasks/main.yml
+++ b/ansible/roles/php/tasks/main.yml
@@ -2,11 +2,14 @@
 - name: Install PHP
   action: apt pkg={{item}} state=installed
   with_items:
-    - php5
-    - libapache2-mod-php5
-    - php5-mcrypt
-    - php5-curl
-    - php5-gd
-    - php5-json
-    - php5-xmlrpc
+    - php7.0
+    - libapache2-mod-php7.0
+    - php7.0-curl
+    - php7.0-gd
+    - php7.0-json
+    - php7.0-xmlrpc
+    - php7.0-mbstring
+    - php7.0-dom
+    - php7.0-exif
+    - php7.0-simplexml
   notify: restart apache
