--- a/ansible/develop.yml
+++ b/ansible/develop.yml
@@ -1,6 +1,12 @@
 - name: Setup WithKnown Development Environment
   hosts: all
   sudo: true
+  gather_facts: no
+  pre_tasks:
+    - name: 'update packages'
+      raw: sudo apt-get update
+    - name: 'install python2'
+      raw: sudo apt-get -y install python-simplejson
 
   roles:
     - common
