Adding utility packages for running tests

--- a/ansible/roles/common/tasks/main.yml
+++ b/ansible/roles/common/tasks/main.yml
@@ -10,6 +10,9 @@
     - ntp
     - htop
     - python
+    - aptitude
+    - phpunit
+    - libxml2-utils
 
 - name: Configure ntp file
   template: src=ntp.conf.j2 dest=/etc/ntp.conf
