--- a/ansible/roles/common/tasks/main.yml
+++ b/ansible/roles/common/tasks/main.yml
@@ -13,6 +13,7 @@
     - aptitude
     - phpunit
     - libxml2-utils
+    - curl
 
 - name: Configure ntp file
   template: src=ntp.conf.j2 dest=/etc/ntp.conf
