Installing git, zip and composer

--- a/ansible/roles/php/tasks/main.yml
+++ b/ansible/roles/php/tasks/main.yml
@@ -12,4 +12,8 @@
     - php7.2-dom
     - php7.2-exif
     - php7.2-simplexml
+    - zip
+    - unzip
+    - git
+    - composer
   notify: restart apache
