--- a/ansible/roles/php/tasks/main.yml
+++ b/ansible/roles/php/tasks/main.yml
@@ -12,4 +12,8 @@
     - php7.3-dom
     - php7.3-exif
     - php7.3-simplexml
+    - zip
+    - unzip
+    - git
+    - composer
   notify: restart apache
