--- a/ansible/roles/mysql/tasks/main.yml
+++ b/ansible/roles/mysql/tasks/main.yml
@@ -3,8 +3,8 @@
   action: apt pkg={{item}} state=installed
   with_items:
     - mariadb-server
-    - php7.3-mysql
-    - php7.3-pdo
+    - php{{ php_version }}-mysql
+    - php{{ php_version }}-pdo
     - python-mysqldb
 
 - name: Get list of hosts for the anonymous user
